*samri_bindata-0.3 (17 Oct 2019)

  17 Oct 2019;  <chymera@gentoo.org> +metadata.xml, +samri_bindata-0.3.ebuild:
  sci-biology/samri_bindata: version bump ahead of Gentoo Science