@@ -1,1 +1,2 @@
 DIST nvcz_data-0.1.tar.xz 1634626696 SHA256 995a5cdffbcdc975ca95baea3e637a306ac6839a687e040ef7dd020c5a082674 SHA512 e16cc16c718237a97c0c7f05acea2e0b0a511cb3826cac50af2cd67ea59ebfd0a8646961ebe3cbceafea3607cc1c65ae89c32b49c5647f58007033f42d0eb37c WHIRLPOOL 846b7c05417f10c658c7de9be3afa88fcf666227ad96ff2e7f3f3510aa097bf3435ef6633aa4fb0003e72b6fb3cf8c77a3b90a61f0e5c089ea22091a15e0e0e1
+DIST nvcz_data-0.2.tar.xz 1588276256 SHA256 bf88ae8a29d2d658b24a3e749fe9566017690aa4a926acc56948fbc7563610ba SHA512 6193354451be5fa04d473c06396c1cd1eda2cc14484c20a2aff626aaa02d6ebfbaf49ea12fdaf0d14c02f02e4a77ac383e1b396c006ee90c2e5d34b9f0c34889 WHIRLPOOL 9f2897ea955c563f0c3d67070f149470c4d94b68c76e84936e1390f938e9d927b36e724bd8e7582e8dd493d8e112cd544e66cc99c15884499c0428ff20852285
